--- a/src/app/reminders/components/reminders-list/reminders-list.component.html
+++ b/src/app/reminders/components/reminders-list/reminders-list.component.html
@@ -48,3 +48,5 @@
     <span style="color: #ccc;">Select a reminder to see the details</span>
   </div>
 </div>
+<p-toast></p-toast>
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
