--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <!-- Sidenav étudiants -->
-            <ng-container *ngIf="role === 'student'">
+            <ng-container *ngIf="role === 'étudiant'">
               <ul class="list-none p-0 m-0 overflow-hidden">
                 <li routerLink="/dashboard">
                   <a pRipple
@@ -61,7 +61,7 @@
             </ng-container>
 
             <!-- Sidenav enseignants -->
-            <ng-container *ngIf="role === 'teacher' || role === 'teacher-resp'">
+            <ng-container *ngIf="role === 'enseignant'">
               <ul class="list-none p-0 m-0 overflow-hidden">
                 <li routerLink="/dashboard">
                   <a pRipple
@@ -146,7 +146,7 @@
             </ng-container>
 
             <!-- Sidenav admin -->
-            <ng-container *ngIf="role === 'admin'">
+            <ng-container *ngIf="isAdmin && role === 'admin'">
               <ul class="list-none p-0 m-0 overflow-hidden">
                 <li routerLink="/dashboard">
                   <a pRipple
@@ -246,12 +246,12 @@
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Emploi du temps</span>
                   </a>
                 </li>
-                <li routerLink="/resp/groups">
+                <li routerLink="/resp/cohort">
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
                     <i class="pi pi-sitemap mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Groupes</span>
+                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Cohorte</span>
                   </a>
                 </li>
                 <li>
