mise a jour de la gestion des trainings par rapport a la nouveelle bdd

--- a/src/app/admin/components/training-list/training-list.component.html
+++ b/src/app/admin/components/training-list/training-list.component.html
@@ -1,13 +1,22 @@
 <div class="container">
-  <app-create-training *ngIf="displayCreateTrainingDialog" [degrees]="degrees"
-    (trainingCreated)="onTrainingCreated($event)"></app-create-training>
+  <app-create-training
+    *ngIf="displayCreateTrainingDialog"
+    [promotions]="promotions"
+    (trainingCreated)="onTrainingCreated($event)"
+  ></app-create-training>
 
-  <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(239, 244, 255)">
+  <div
+    class="flex align-item-center border-round p-4 relative"
+    style="background-color: rgb(239, 244, 255)"
+  >
     <div>
       <h1 class="text-2xl font-semibold">Gestion des parcours</h1>
       <p class="text-900 -mt-2">Créer, modifier ou supprimer des parcours.</p>
     </div>
-    <div class="absolute hidden sm:hidden md:block" style="top: -10px; right: 50px">
+    <div
+      class="absolute hidden sm:hidden md:block"
+      style="top: -10px; right: 50px"
+    >
       <img src="/assets/images/3dicons/rocket.png" alt="cube" width="180px" />
     </div>
   </div>
@@ -20,31 +29,56 @@
       <div>
         <span class="p-input-icon-left">
           <i class="pi pi-search mb-3"></i>
-          <input type="text" pInputText [(ngModel)]="searchQuery" (input)="onSearch()"
-            placeholder="Rechercher un parcours" />
+          <input
+            type="text"
+            pInputText
+            [(ngModel)]="searchQuery"
+            (input)="onSearch()"
+            placeholder="Rechercher un parcours"
+          />
         </span>
       </div>
 
-      <p-button icon="pi pi-plus" label="Créer un parcours" class="custom-button"
-        (click)="showCreateTrainingDialog()"></p-button>
+      <p-button
+        icon="pi pi-plus"
+        label="Créer un parcours"
+        class="custom-button"
+        (click)="showCreateTrainingDialog()"
+      ></p-button>
     </div>
 
     <!-- Training Table with PrimeNG -->
-    <p-table *ngIf="!isLoading; else tableSkeleton" [value]="filteredTrainings" [paginator]="true" [rows]="10"
-      [responsiveLayout]="scroll" [showCurrentPageReport]="true"
+    <p-table
+      *ngIf="!isLoading; else tableSkeleton"
+      [value]="filteredTrainings"
+      [paginator]="true"
+      [rows]="10"
+      [responsiveLayout]="scroll"
+      [showCurrentPageReport]="true"
       currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} parcours"
-      [rowsPerPageOptions]="[5, 10, 20, 50]">>
+      [rowsPerPageOptions]="[5, 10, 20, 50]"
+      >>
       <ng-template pTemplate="header">
         <tr>
-          <th>ID</th>
+          <th>ID du parcours</th>
           <th>Nom du parcours</th>
+          <th>Année de la promotion</th>
+
           <th>
-            Formation
-            <p-dropdown class="ml-2" [options]="degrees" (onChange)="onDegreeFilter($event)" [placeholder]="'Toutes'"
-              optionLabel="name" optionValue="id" appendTo="body" [showClear]="true">
+            <p-dropdown
+              class="ml-2"
+              [options]="degrees"
+              (onChange)="onDegreeFilter($event)"
+              [placeholder]="'Toutes'"
+              optionLabel="name"
+              optionValue="id"
+              appendTo="body"
+              [showClear]="true"
+            >
             </p-dropdown>
           </th>
-          <th></th>
+          <th>Semestre</th>
+          <th>Actions</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-training>
@@ -58,26 +92,68 @@
           <td *ngIf="training.isEditing">
             <input pInputText type="text" [(ngModel)]="training.updatedName" />
           </td>
+          <td *ngIf="!training.isEditing">{{ training.promotion_year }}</td>
+          <td *ngIf="!training.isEditing">{{ training.degree_name }}</td>
+          <td *ngIf="training.isEditing" colspan="2">
+            <p-dropdown
+              [options]="promotions"
+              [(ngModel)]="training.updatedPromotionId"
+              optionLabel="uniqueLabel"
+              optionValue="id"
+              placeholder="Sélectionner une promotion"
+              appendTo="body"
+            >
+            </p-dropdown>
+          </td>
+
           <td *ngIf="!training.isEditing">
             <ng-container *ngIf="!training.isLoading; else singleSkeleton">
-              {{ training.degree_name }}
+              {{ training.semester ? training.semester : "N/A" }}
             </ng-container>
           </td>
           <td *ngIf="training.isEditing">
-            <p-dropdown [options]="degrees" [(ngModel)]="training.updatedDegreeId" optionLabel="name" optionValue="id"
-              appendTo="body">
-            </p-dropdown>
+            <input
+              pInputText
+              type="number"
+              [(ngModel)]="training.updatedSemester"
+            />
           </td>
           <td class="flex justify-content-evenly">
-            <div *ngIf="!training.isEditing" class="flex align-items-center justify-content-center">
-              <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
-                class="p-button-rounded p-button-text" (click)="startEditing(training)"></button>
-              <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
-                class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(training)"></button>
+            <div
+              *ngIf="!training.isEditing"
+              class="flex align-items-center justify-content-center"
+            >
+              <button
+                pButton
+                pRipple
+                pTooltip="Modifier"
+                tooltipPosition="top"
+                type="button"
+                icon="pi pi-pencil"
+                class="p-button-rounded p-button-text"
+                (click)="startEditing(training)"
+              ></button>
+              <button
+                pButton
+                pRipple
+                pTooltip="Supprimer"
+                tooltipPosition="top"
+                icon="pi pi-trash"
+                class="p-button-rounded p-button-text p-button-danger"
+                (click)="confirmDelete(training)"
+              ></button>
             </div>
-            <div *ngIf="training.isEditing" class="flex align-items-center justify-content-center">
-              <button pButton type="button" label="Sauvegarder" (click)="stopEditing(training)"
-                class="p-button-success"></button>
+            <div
+              *ngIf="training.isEditing"
+              class="flex align-items-center justify-content-center"
+            >
+              <button
+                pButton
+                type="button"
+                label="Sauvegarder"
+                (click)="stopEditing(training)"
+                class="p-button-success"
+              ></button>
             </div>
           </td>
         </tr>
@@ -92,7 +168,10 @@
 </div>
 
 <!-- Confirmation Dialog and Toast Messages -->
-<p-confirmDialog header="Supprimer" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+<p-confirmDialog
+  header="Supprimer"
+  icon="pi pi-exclamation-triangle"
+></p-confirmDialog>
 <p-toast></p-toast>
 
 <ng-template #singleSkeleton>
