--- a/src/app/reminders/components/reminders-list/reminders-list.component.html
+++ b/src/app/reminders/components/reminders-list/reminders-list.component.html
@@ -5,10 +5,10 @@
     <span><h3>All Reminders</h3></span>
     <!-- Barre de recherche -->
     <span class="p-input-icon-left w-full" style="font-size: 14px; height: 30px;">
-      <i class="pi pi-search" style="font-size: 1rem;"></i>
-      <input class="p-inputtext" type="text" placeholder="Rechercher" style="width: calc(100% - 2rem); height: 100%;" />
+      <i class="pi pi-search"></i>
+      <input class="p-inputtext" type="text" placeholder="Rechercher" style="width: calc(100% - 2rem); height: 100%;" [(ngModel)]="searchText" (ngModelChange)="filterReminders()" />
     </span>
-    <div *ngFor="let rappel of rappels" class="rappel-item" style="padding: 8px; margin-bottom: 5px; border: 1px solid #eee; border-radius: 3px; cursor: pointer;" (click)="selectRappel(rappel)">
+    <div *ngFor="let rappel of filteredRappels" class="rappel-item" style="padding: 8px; margin-bottom: 5px; border: 1px solid #eee; border-radius: 3px; cursor: pointer;" (click)="selectRappel(rappel)">
       {{ rappel.title }}
       <div>{{ rappel.reminder_date | date:'E d MMM yyyy' }}</div>
     </div>
