--- a/src/app/reminders/components/reminders-list/reminders-list.component.html
+++ b/src/app/reminders/components/reminders-list/reminders-list.component.html
@@ -1,52 +1,65 @@
-<div class="container" style="display: flex; justify-content: space-between; margin: 20px; flex-direction: row; overflow: hidden; border: 1px solid #ccc; border-radius: 5px;">
+<div class="container">
 
-  <!-- Colonne des Rappels avec barre de recherche -->
-  <div class="rappels-list" style="flex: 1; padding: 10px; border-right: 1px solid #ccc; margin-left: 20px;">
-    <span><h3>All Reminders</h3></span>
-    <!-- Barre de recherche -->
-    <span class="p-input-icon-left w-full" style="font-size: 14px; height: 30px;">
-      <i class="pi pi-search"></i>
-      <input class="p-inputtext" type="text" placeholder="Rechercher" style="width: calc(100% - 2rem); height: 100%;" [(ngModel)]="searchText" (ngModelChange)="filterReminders()" />
-    </span>
-    <div *ngFor="let rappel of filteredRappels" class="rappel-item" style="padding: 8px; margin-bottom: 5px; border: 1px solid #eee; border-radius: 3px; cursor: pointer;" (click)="selectRappel(rappel)">
-      {{ rappel.title }}
-      <div>{{ rappel.reminder_date | date:'E d MMM yyyy' }}</div>
+  <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(239, 244, 255)">
+    <div>
+      <h1 class="text-2xl font-semibold">Mes rappels</h1>
+      <p class="text-900 -mt-2">Créer des rappels pour se souvenir d'informations importantes.</p>
+    </div>
+    <div class="absolute hidden sm:hidden md:block" style="top: -10px; right: 50px">
+      <img src="/assets/images/3dicons/pin.png" alt="cube" width="180px" />
     </div>
   </div>
 
-  <!-- Colonne du Contenu du Rappel avec bouton d'ajout -->
-<div class="rappel-content" style="flex: 2; padding: 10px; border-left: 1px solid #ccc; position: relative;">
-  <!-- Bouton Ajouter un rappel -->
-  <button pButton (click)="addNewReminder()" style="background-color: #007bff; border: none; color: white; padding: 10px 20px; text-align: center; text-decoration: none; font-size: 14px; cursor: pointer; border-radius: 5px; position: absolute; top: 10px; right: 10px;">
-    Add reminders
-  </button>
+  <div class="flex gap-5 shadow-1 p-5 border-round mt-7">
+    <!-- Colonne des Rappels avec barre de recherche -->
+    <div class="rappels-list border-right-1 pr-5 p-1 w-5 border-300">
+      <h1 class="text-xl mb-2 font-semibold">Mes rappels</h1>
+      <!-- Barre de recherche -->
+      <input pInputText class="w-full mb-4 mt-2" type="text" placeholder="Rechercher un rappel" [(ngModel)]="searchText"
+        (ngModelChange)="filterReminders()" />
 
-  <span>
-    <h3>Change Title</h3>
-  </span>
-  <div *ngIf="selectedRappel">
-    <div class="card" style="border: 1px solid #ccc; border-radius: 5px;">
-      <div class="card-header" style="background-color: #f0f0f0; padding: 10px; border-bottom: 1px solid #ccc; border-radius: 5px 5px 0 0;">
-        <!-- Champ de saisie pour le titre lié à la propriété title -->
-        <input [(ngModel)]="selectedRappel.title" style="width: 100%; padding: 5px;" (input)="onTitleChange()">
+      <div pRipple *ngFor="let rappel of filteredRappels" (click)="selectRappel(rappel)"
+        class="rappelItem p-3 border-round mb-3 pt-3">
+        <h1 class="text-lg mb-3 font-semibold">{{ rappel.title }}</h1>
+        <div class="flex justify-content-between -mt-2">
+          <p class="text-sm">{{ rappel.reminder_date | date:'E d MMM yyyy' }}</p>
+          <p-button (click)="deleteSelectedRappel()" icon="pi pi-trash" [rounded]="true" [text]="true"
+            severity="danger"></p-button>
+        </div>
       </div>
-      <div class="card-body" style="padding: 10px;">
-        <!-- Champ de saisie pour le texte lié à la propriété reminder_text -->
-        <textarea [(ngModel)]="selectedRappel.reminder_text" style="width: 100%; height: 100px; padding: 5px;" (input)="onTextChange()"></textarea>
-        <p>{{ dateModified ? (selectedRappel.reminder_date | date:'E d MMM yyyy') : (selectedRappel.reminder_date | date:'E d MMM yyyy H:mm:ss') }}</p>
-        <!-- Ajoutez d'autres champs du rappel au besoin -->
-        <button pButton (click)="updateSelectedRappel()" style="background-color: #007bff; border: none; color: white; padding: 10px 20px; text-align: center; text-decoration: none; font-size: 14px; cursor: pointer; border-radius: 5px; margin-top: 10px;">
-          Update Reminder
-        </button>
-        <button pButton (click)="deleteSelectedRappel()" style="background-color: #dc3545; border: none; color: white; padding: 10px 20px; text-align: center; text-decoration: none; font-size: 14px; cursor: pointer; border-radius: 5px; margin-top: 10px; margin-left: 10px;">
-          Delete Reminder
-        </button>
+    </div>
+
+    <!-- Colonne du Contenu du Rappel avec bouton d'ajout -->
+    <div class="rappel-content w-full pr-3 pl-3">
+
+      <div class="flex justify-content-end mb-4">
+        <!-- Bouton Ajouter un rappel -->
+        <p-button (click)="addNewReminder()">
+          Nouveau rappel
+        </p-button>
+      </div>
+
+      <div *ngIf="selectedRappel">
+        <div>
+          <div class="card-header">
+            <!-- Champ de saisie pour le titre lié à la propriété title -->
+            <input pInputText class="w-full" [(ngModel)]="selectedRappel.title" (input)="onTitleChange()">
+          </div>
+          <div class="card-body mt-3">
+            <!-- Champ de saisie pour le texte lié à la propriété reminder_text -->
+            <textarea pInputText [(ngModel)]="selectedRappel.reminder_text" style="width: 100%; height: 150px;"
+              (input)="onTextChange()"></textarea>
+            <!-- <p>{{ dateModified ? (selectedRappel.reminder_date | date:'E d MMM yyyy') : (selectedRappel.reminder_date |
+              date:'E d MMM yyyy H:mm:ss') }}</p> -->
+            <!-- Ajoutez d'autres champs du rappel au besoin -->
+          </div>
+        </div>
+      </div>
+      <div *ngIf="!selectedRappel">
+        <span style="color: #ccc;">Sélectionnez un rappel pour voir les détails</span>
       </div>
     </div>
   </div>
-  <div *ngIf="!selectedRappel">
-    <span style="color: #ccc;">Select a reminder to see the details</span>
-  </div>
-</div>
-<p-toast></p-toast>
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+
+  <p-toast></p-toast>
+  <p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
