--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -16,7 +16,7 @@ dataKey="id"
             <th>Initial</th>
             <th>Bureau</th>
             <th>Admin</th>
-            <th>Responsable</th>
+            <th>Responsable EDT</th>
             <th>Modifier</th>
             <th>Supprimer</th>
         </tr>
