--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -16,7 +16,7 @@
         <th >Email</th>
         <th >Rôle</th>
         <th >Admin</th>
-        <th >Responsable</th>
+        <th >Responsable EDT</th>
         <th >Modifier</th>
         <th >Supprimer</th>
     </tr>
