--- a/src/app/resp/components/cohort/cohort.component.html
+++ b/src/app/resp/components/cohort/cohort.component.html
@@ -1,4 +1,4 @@
-<div class="container-large">
+<!-- <div class="container-large">
     <div class="flex gap-5">
         <div class="w-20rem">
             <p-tree [value]="files" class="w-full md:w-20rem" [filter]="true" filterMode="strict"
@@ -24,4 +24,4 @@
     </div>
 </div>
 
-<p-toast></p-toast>
+<p-toast></p-toast> -->
