--- a/src/app/admin/components/form/add-teachers/add-teachers.component.html
+++ b/src/app/admin/components/form/add-teachers/add-teachers.component.html
@@ -49,7 +49,7 @@
             </div>  
             <div class="flex align-items-center gap-3">
                 <p-checkbox name="group1" value="true"  inputId="ttmanager" formControlName="ttmanager"></p-checkbox>
-                <label for="ttmanager">Est un responsable de l'emploi du temps</label>
+                <label for="ttmanager">Attribuer les droits d'un responsable de l'emploi du tempsAttribuer les droits d'un responsable de l'emploi du temps</label>
             </div>
             <div class="field">
                 
