--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -143,7 +143,7 @@
                         formControlName="ttmanager" 
                         (onChange)="onTTManagerCheckboxChange($event)">
                         </p-checkbox>
-                        <label for="ttmanager">Est un responsable de l'emploi du temps</label>
+                        <label for="ttmanager">Attribuer les droits d'un responsable de l'emploi du temps</label>
                     </div>
                     <div class="field">
                     </div>
