--- a/src/app/admin/components/form/add-users/add-users.component.html
+++ b/src/app/admin/components/form/add-users/add-users.component.html
@@ -33,14 +33,14 @@
             </div>  
             <div class="flex align-items-center gap-3">
                 <p-checkbox name="group1" value="true"  inputId="admin" formControlName="admin"></p-checkbox>
-                <label for="admin">Attribuer les droits administrateur</label>
+                <label for="admin">Attribuer les droits administrateurs</label>
             </div>
             <div class="field">
 
             </div>  
             <div class="flex align-items-center gap-3">
                 <p-checkbox name="group1" value="true"  inputId="ttmanager" formControlName="ttmanager"></p-checkbox>
-                <label for="ttmanager">Est un responsable de l'emploi du temps</label>
+                <label for="ttmanager">Attribuer les droits d'un responsable de l'emploi du temps</label>
             </div>
             <div class="field">
 
