--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -131,7 +131,7 @@ dataKey="id"
                         formControlName="admin" 
                         (onChange)="onAdminCheckboxChange($event)">
                         </p-checkbox>
-                        <label for="admin">Attribuer les droits administrateur</label>
+                        <label for="admin">Attribuer les droits administrateurs</label>
                     </div>
                     <div class="flex align-items-center gap-3"  >
                         <p-checkbox *ngIf="teacherUpdateForm && teacherUpdateForm.get('ttmanager')" 
@@ -142,7 +142,7 @@ dataKey="id"
                         formControlName="ttmanager" 
                         (onChange)="onTTManagerCheckboxChange($event)">
                         </p-checkbox>
-                        <label for="ttmanager">Est un responsable de l'emploi du temps</label>
+                        <label for="ttmanager">Attribuer les droits d'un responsable de l'emploi du temps</label>
                     </div>
                     <div class="field">
                     </div>
