--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -109,7 +109,7 @@
                         </li>
                       </ul>
                     </li>
-                    <li>
+                    <li routerLink="/statistics">
                       <a pRipple
                         class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
                         <i class="pi pi-chart-line mr-2"></i>
