Mise en page formation

--- a/src/app/resp/components/cohort/cohort.component.html
+++ b/src/app/resp/components/cohort/cohort.component.html
@@ -17,7 +17,7 @@
             </p-tree>
         </div>
 
-        <div class="w-full border-round" style="border: 1px solid #dee2e6">
+        <div class="w-full">
             <router-outlet></router-outlet>
         </div>
     </div>
