--- a/src/app/resp/components/degree/degree.component.html
+++ b/src/app/resp/components/degree/degree.component.html
@@ -2,7 +2,7 @@
 
     <div class="flex align-items-center border-round p-4 relative mb-6" style="background-color: rgb(255, 247, 234)">
         <div>
-            <p class="text-900">Cohorte > Formations ></p>
+            <p class="text-900 font-medium">Cohorte > Formations ></p>
             <h1 class="text-2xl font-semibold">BUT {{ degreeInfo.name }}</h1>
         </div>
         <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
@@ -54,7 +54,7 @@
                         <span>Étudiants</span>
                     </div>
                     <div>
-                        <span class="badge">{{ students.length }}00</span>
+                        <span class="badge">{{ students.length }}</span>
                     </div>
                 </div>
             </ng-template>
