Récupérer arbre des cohortes depuis l'API

--- a/src/app/resp/components/cohort/cohort.component.scss
+++ b/src/app/resp/components/cohort/cohort.component.scss
@@ -9,3 +9,7 @@
 .TreeCohort-show {
     transform: translateX(0);
 }
+
+.pipe-icon:hover, .chevron-left-icon:hover, .chevron-right-icon:hover {
+    color: #757575 !important;
+}
