--- a/src/app/resp/components/promotion/promotion.component.html
+++ b/src/app/resp/components/promotion/promotion.component.html
@@ -1,1 +1,19 @@
-<p>promotion works!</p>
+<div *ngIf="promotionInfo" class="p-2 pl-5 pr-5 content">
+  <div
+    class="flex align-items-center border-round p-4 relative mb-6"
+    style="background-color: rgb(255, 247, 234)"
+  >
+    <div>
+      <p class="text-900 font-medium">Cohorte > Formations > Promotions ></p>
+      <h1 class="text-2xl font-semibold">BUT</h1>
+    </div>
+    <div
+      class="absolute hidden sm:hidden md:block"
+      style="top: -14px; right: 50px"
+    >
+      <img src="/assets/images/3dicons/location.png" alt="cube" width="180px" />
+    </div>
+  </div>
+</div>
+
+<p-toast></p-toast>
