--- a/src/app/resp/components/degree/degree.component.html
+++ b/src/app/resp/components/degree/degree.component.html
@@ -1,96 +1,154 @@
 <div *ngIf="degreeInfo" class="p-2 pl-5 pr-5 content">
-
-    <div class="flex align-items-center border-round p-4 relative mb-6" style="background-color: rgb(255, 247, 234)">
-        <div>
-            <p class="text-900 font-medium">Cohorte > Formations ></p>
-            <h1 class="text-2xl font-semibold">BUT {{ degreeInfo.name }}</h1>
-        </div>
-        <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
-            <img src="/assets/images/3dicons/location.png" alt="cube" width="180px">
-        </div>
+  <div
+    class="flex align-items-center border-round p-4 relative mb-6"
+    style="background-color: rgb(255, 247, 234)"
+  >
+    <div>
+      <p class="text-900 font-medium">Cohorte ></p>
+      <h1 class="text-2xl font-semibold">BUT {{ degreeInfo.name }}</h1>
     </div>
+    <div
+      class="absolute hidden sm:hidden md:block"
+      style="top: -14px; right: 50px"
+    >
+      <img src="/assets/images/3dicons/location.png" alt="cube" width="180px" />
+    </div>
+  </div>
 
-    <p-tabView>
-        <p-tabPanel>
-            <ng-template pTemplate="header">
-                <div class="flex gap-2 align-items-center">
-                    <div>
-                        <span>Promotions</span>
-                    </div>
-                    <div>
-                        <span class="badge">{{ promotions.length }}</span>
-                    </div>
-                </div>
-            </ng-template>
-            <p-table [value]="promotions" [tableStyle]="{'min-width': '60rem'}" [paginator]="true" [rows]="5"
-                [showCurrentPageReport]="true"
-                currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} promotions"
-                [rowsPerPageOptions]="[5, 10, 20, 50]">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th pSortableColumn="name">Nom<p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="student_count">Étudiants inscrits <p-sortIcon
-                                field="student_count"></p-sortIcon>
-                        </th>
-                        <th></th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-promotion>
-                    <tr>
-                        <td>BUT {{ promotion.level }} {{ degreeInfo.name }} {{ promotion.year }}</td>
-                        <td>{{getStudentCountByPromotion(promotion.id)}}</td>
-                        <td>
-                            <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true"
-                                [text]="true" severity="secondary "></p-button>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </p-tabPanel>
-        <p-tabPanel>
-            <ng-template pTemplate="header">
-                <div class="flex gap-2 align-items-center">
-                    <div>
-                        <span>Étudiants</span>
-                    </div>
-                    <div>
-                        <span class="badge">{{ students.length }}</span>
-                    </div>
-                </div>
-            </ng-template>
-            <p-table [value]="students" [tableStyle]="{'min-width': '60rem'}" [paginator]="true" [rows]="5"
-                [showCurrentPageReport]="true"
-                currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
-                [rowsPerPageOptions]="[5, 10, 20, 50]">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th pSortableColumn="firstname">Nom <p-sortIcon field="firstname"></p-sortIcon></th>
-                        <th pSortableColumn="lastname">Prénom <p-sortIcon field="lastname"></p-sortIcon></th>
-                        <th pSortableColumn="promotion">Promotion <p-sortIcon field="promotion"></p-sortIcon></th>
-                        <th pSortableColumn="td">Alternant <p-sortIcon field="td"></p-sortIcon></th>
-                        <th pSortableColumn="td">TD <p-sortIcon field="td"></p-sortIcon></th>
-                        <th pSortableColumn="tp">TP <p-sortIcon field="tp"></p-sortIcon></th>
-                        <th></th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-student>
-                    <tr>
-                        <td>{{student.first_name}}</td>
-                        <td>{{student.last_name}}</td>
-                        <td>BUT {{ student.promotion.level }} {{ degreeInfo.name }} {{ student.promotion.year }}</td>
-                        <td>{{student.isApprentice}}</td>
-                        <td>{{student.td[0].name}}</td>
-                        <td>{{student.tp[0].name}}</td>
-                        <td>
-                            <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true"
-                                [text]="true" severity="secondary "></p-button>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </p-tabPanel>
-    </p-tabView>
+  <p-tabView>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <div class="flex gap-2 align-items-center">
+          <div>
+            <span>Promotions</span>
+          </div>
+          <div>
+            <span class="badge">{{ promotions.length }}</span>
+          </div>
+        </div>
+      </ng-template>
+      <p-table
+        [value]="promotions"
+        [tableStyle]="{ 'min-width': '60rem' }"
+        [paginator]="true"
+        [rows]="5"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} promotions"
+        [rowsPerPageOptions]="[5, 10, 20, 50]"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="name">
+              Nom<p-sortIcon field="name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="student_count">
+              Étudiants inscrits <p-sortIcon field="student_count"></p-sortIcon>
+            </th>
+            <th></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-promotion>
+          <tr>
+            <td>
+              BUT {{ promotion.level }} {{ degreeInfo.name }}
+              {{ promotion.year }}
+            </td>
+            <td>{{ getStudentCountByPromotion(promotion.id) }}</td>
+            <td>
+              <p-button
+                (click)="menuStudents.toggle($event)"
+                icon="pi pi-ellipsis-v"
+                [rounded]="true"
+                [text]="true"
+                severity="secondary "
+              ></p-button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </p-tabPanel>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <div class="flex gap-2 align-items-center">
+          <div>
+            <span>Étudiants</span>
+          </div>
+          <div>
+            <span class="badge">{{ students.length }}</span>
+          </div>
+        </div>
+      </ng-template>
+      <p-table
+        [value]="students"
+        [tableStyle]="{ 'min-width': '60rem' }"
+        [paginator]="true"
+        [rows]="5"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
+        [rowsPerPageOptions]="[5, 10, 20, 50]"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="firstname">
+              Nom <p-sortIcon field="firstname"></p-sortIcon>
+            </th>
+            <th pSortableColumn="lastname">
+              Prénom <p-sortIcon field="lastname"></p-sortIcon>
+            </th>
+            <th pSortableColumn="promotion">
+              Promotion <p-sortIcon field="promotion"></p-sortIcon>
+            </th>
+            <th pSortableColumn="td">
+              Alternant <p-sortIcon field="td"></p-sortIcon>
+            </th>
+            <th pSortableColumn="td">
+              TD <p-sortIcon field="td"></p-sortIcon>
+            </th>
+            <th pSortableColumn="tp">
+              TP <p-sortIcon field="tp"></p-sortIcon>
+            </th>
+            <th></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-student>
+          <tr>
+            <td>{{ student.first_name }}</td>
+            <td>{{ student.last_name }}</td>
+            <td>
+              BUT {{ student.promotion.level }} {{ degreeInfo.name }}
+              {{ student.promotion.year }}
+            </td>
+            <td>
+              <i
+                class="pi"
+                [ngClass]="{
+                  'pi-check-circle text-green-300': student.isApprentice,
+                  'pi-times-circle text-red-300': !student.isApprentice
+                }"
+              ></i>
+            </td>
+            <td>{{ student.td[0].name }}</td>
+            <td>{{ student.tp[0].name }}</td>
+            <td>
+              <p-button
+                (click)="menuStudents.toggle($event)"
+                icon="pi pi-ellipsis-v"
+                [rounded]="true"
+                [text]="true"
+                severity="secondary"
+              ></p-button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </p-tabPanel>
+  </p-tabView>
 </div>
 
 <p-toast></p-toast>
-<p-menu #menuStudents [model]="menuItemsStudents" [popup]="true" appendTo="body"></p-menu>
+<p-menu
+  #menuStudents
+  [model]="menuItemsStudents"
+  [popup]="true"
+  appendTo="body"
+></p-menu>
